# rmos

./: Cargo.toml  README.MD  makefile
.cargo/: config
src/: gdt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/common/: mod.rs  port.rs
tests/: basic_boot.rs  should_panic.rs
trash/: _main
