[package]
name = "rmos"
version = "0.1.0"
edition = "2018"
[package.metadata.bootimage]
build-command = ["xbuild"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
[dependencies]
bootloader = "0.9.20"
volatile="0.2.6"
spin = "0.9.4"
[dependencies.lazy_static]
version="1.0"
features=["spin_no_std"]
[profile.dev]
panic="abort"
[profile.release]
panic="abort"

