[package]
name = "rmos"
version = "0.1.0"
edition = "2018"
[package.metadata.bootimage]
build-command = ["xbuild"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args=["-device","isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code=33
[dependencies]
bootloader = "0.9.20"
volatile="0.2.6"
spin = "0.9.4"
x86_64="0.14.2"
[dependencies.lazy_static]
version="1.0"
features=["spin_no_std"]
[profile.dev]
panic="abort"
[profile.release]
panic="abort"

